// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: Button render active style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ brHaNL"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render block style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ GPMFq"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render component disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ ZvdQP"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render component with icon 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ jKoWNj"
  >
    <img
      src="test-file-stub"
    />
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render the component 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ kfyREp"
  >
    Hello world
  </button>
</DocumentFragment>
`;
